--- a/git.scss
+++ b/git.scss
@@ -1,3 +1,10 @@
+body{
+    height: 100vh;
+    background-color: gold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .outter-circle{
     height: 250px;
     width: 250px;
@@ -68,4 +75,20 @@ span{
 .eleven{
     bottom: 77%;
     left: 28%;
+}
+.point{
+    font-size: 70px;
+    font-weight: bolder;
+    left:45%;
+    bottom: 45%;
+}
+.l-hand{
+    font-size: 38px;
+    left:48%;
+    bottom: 53%;
+}
+.s-hand{
+    font-size: 38px;
+    left:48%;
+    bottom: 53%;
 }
