--- a/git.scss
+++ b/git.scss
@@ -4,6 +4,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 .outter-circle{
     height: 250px;
@@ -22,11 +23,16 @@ body{
     background-color: white;
     border-radius: 50%;
     align-self: center;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    z-index: 1;
 }
 span{
     position: absolute;
     margin: 0px;
     padding: 0px;
+    z-index: 2;
 }
 .twelve{
     top: 35px;
@@ -76,19 +82,54 @@ span{
     bottom: 77%;
     left: 28%;
 }
-.point{
-    font-size: 70px;
-    font-weight: bolder;
-    left:45%;
-    bottom: 45%;
-}
 .l-hand{
-    font-size: 38px;
-    left:48%;
-    bottom: 53%;
+    height: 3px;
+    width: 100px;
+    background: linear-gradient(90deg, white 50%, gold 50%);
+    border: none;
+    align-self: center;
+    position: fixed;
+    animation: cloc 2s forwards;
 }
 .s-hand{
-    font-size: 38px;
-    left:48%;
-    bottom: 53%;
+    height: 3px;
+    width: 60px;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0) 50%, gold 50%);
+    border: none;
+    align-self: center;
+    animation: clock 2s forwards;
+    z-index: 3;
+}
+.point{
+    align-self: center;
+    color: green;
+    z-index: 10;
+}
+@keyframes clock{
+    0%{
+    transform: rotateZ(0deg);
+    }
+    100%{
+    transform: rotateZ(216deg);
+    }
+}
+@keyframes cloc{
+    0%{
+    transform: rotateZ(0deg);
+    }
+    100%{
+    transform: rotateZ(50deg);
+    }
+}
+.inner-circle2{
+    height: 200px;
+    width: 200px;
+    background-color: transparent;
+    position:fixed;
+    border-radius: 50%;
+    align-self: center;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    z-index: 3;
 }
